<resources>
    <string name="app_name">Split Me</string>
    <string name="shared_prefs">kryx07.expensereconcilerclient.sharedprefs</string>
    <string name="no_value">No value</string>
    <string name="fetching_error">There was an error fetching your request</string>

    <string name="transactions">Transactions</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="payables">Payables</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="currency">PLN</string>

    <string name="me">Me</string>
    <string name="my_user">MY_USER</string>
    <string name="receivables_total">Receivables Total: </string>
    <string name="payables_total">Payables Total: </string>
    <string name="payable">Payable</string>
    <string name="receivable">Receivable</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="payer">Payer</string>
    <string name="action_search">Search for a user</string>
    <string name="groups">Groups</string>
    <string name="balance">Balance</string>
    <string name="balance_currency">PLN</string>
    <string name="balance_amount">amount</string>
    <string name="my_transactions">My Transactions</string>
    <string name="my_groups">My Groups</string>
    <string name="common">Common</string>
    <string name="clicked_transaction">clicked_transaction</string>
    <string name="transaction_user">Transaction_User</string>
    <string name="group">Group</string>
    <string name="update_group_from_detail_view">Update group from detail view</string>
    <string name="fragment_action">Fragment Action</string>
    <string name="delete">Delete</string>
    <string name="transaction_selected">transaction selected</string>
    <string name="transactions_selected">transactions selected</string>
    <string name="calculator_fragment_title">Enter amount</string>
    <string name="amount_from_detail_transaction_screen">amount_from_detail_transaction_screen</string>
    <string name="button_label_authorize">authorize</string>
    <string name="button_label_refresh">refresh</string>
    <string name="button_label_userinfo">userinfo</string>
    <string name="app_title">App title</string>
    <string name="no_token">notoken</string>
    <string name="oauth2_access_token_title">access token</string>
    <string name="oauth2_refresh_token_title">refresh access token</string>
    <string name="oidc_id_token_title">oidc id token</string>
    <string name="oidc_userinfo_title">oidc userinfo</string>
    <string name="not_authorized">unauthorized</string>
    <string name="json_error">json error</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="access_token">access_token</string>

</resources>
