<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:enabled="true"
                android:paddingTop="10dp"
                android:text="@string/app_title"
                android:textSize="10pt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp"
                android:text="@string/oauth2_access_token_title" />

            <TextView
                android:id="@+id/oauth2_access_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/no_token" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp"
                android:text="@string/oauth2_refresh_token_title" />

            <TextView
                android:id="@+id/oauth2_refresh_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/no_token" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp"
                android:text="@string/oidc_id_token_title" />

            <TextView
                android:id="@+id/oidc_id_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/no_token" />

            <Button
                android:id="@+id/button_authorize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="requestAuthorization"
                android:text="@string/button_label_authorize" />

            <Button
                android:id="@+id/button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="refreshToken"
                android:text="@string/button_label_refresh" />

            <Button
                android:id="@+id/button_userinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="getUserinfo"
                android:text="@string/button_label_userinfo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp"
                android:text="@string/oidc_userinfo_title" />

            <TextView
                android:id="@+id/oidc_userinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>